# thps-formats

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  thps-formats.sublime-project
examples/: README.md  build.bat  build.spec  requirements.txt
examples/asscopy/: asscopy.py  build.bat  readme.md
examples/fontgen/: build.bat  fontgen.py  readme.md  requirements.txt
examples/prepack/: build.bat  prepack.py  readme.md  requirements.txt
examples/qcomp/: build.bat  qcomp.py  readme.md
examples/qcompy/: build.bat  defines.txt  qcompy.py  readme.md
examples/runmenow/: build.bat  requirements.txt  runmenow.py
tests/: test_bsp.py  test_chunky.py  test_compression.py  test_fonts.py  test_levelselect.py  test_nodearray.py  test_scene.py  test_scripting.py  test_thugpro.py  test_utils_reader.py
tests/data/: BA.q  Example.q  ap.dff  ap.qb  control_setup.qb_compressed  control_setup.qb_compressed_prepack  include.q  random.q  random.qb  random2.qb  randomweights.q  randomweights.qb  randomweights2.qb  strings.q  thug_pro_dev_menu.qb_compressed_pretool  thugpro_leveleditor.qb_compressed_prepack  thugpro_net.qb_compressed  thugpro_net.qb_compressed_prepack
thps_formats/encoding/: pylzss.c
thps_formats/experimental/: __init__.py  bsp.py  chunky.py  enums.py  scene.py  tdx.py  utils.py
thps_formats/graphics/: font.py  scene.py
thps_formats/scripting2/: __init__.py  crc32.py  enums.py  error.py  errors.py  qb.py  utils.py
thps_formats/shared/: __init__.py  enums.py
thps_formats/utils/: diff.py  reader.py  writer.py
(+3 files in other folders)
